<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_login_page">Login Page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_text">Don\'t have an account? Register below</string>
    <string name="register">Register</string>
    <string name="register_page">Register Page</string>
    <string name="name">Name</string>
    <string name="login_text">Already have an account? Login below</string>
    <string name="story_image">Story image</string>
    <string name="logout">Logout</string>
    <string name="post_story">Post story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="image_preview">Image preview</string>
    <string name="settings">Settings</string>
    <string name="retry">Retry</string>
</resources>